# vk_homework

./: .gitignore  README.md
task_5/: CMakeLists.txt  main.cpp  serializer.hpp
task_5/tests/: serializer_tests.cpp
task_6/: CMakeLists.txt  format.hpp  main.cpp  tests.cpp  tests.hpp
task_8/: Makefile  bench_cjson.py  cjson.c  setup.py  test_cjson.py
